test/corpus/functions.txt
====
C-style initialization of arguments using parenthesis
====

NiceNice{
  *new{|aNumber(10)|}
}

---

(source_file
  (class_def
    (class )
    body: (class_def_body
      (class_method_name )
      (function_block
        (parameter_list
          (argument
            name: (identifier )
            value: (code_block 
              (literal
                (number
                  (integer))))))))))

====================
selector as infix binary operators
====================
(
(1..3) collect: { |x| x + 1 } bubble: 0
)
---
(source_file
  (code_block
    (binary_expression
      left: (binary_expression
        left: (collection
          (arithmetic_series
            (number
              (integer ))
            (number
              (integer ))))
        operator: (method_name )
        right: (function_block
          (parameter_list
            (argument
              name: (identifier )))
          (binary_expression
            left: (variable
              (environment_var
                name: (identifier )))
            right: (literal
              (number
                (integer ))))))
      operator: (method_name )
      right: (literal
        (number
          (integer ))))))

====================
nil checks using ?? !? and ?
====================
(
nil ?? "yo";
2 !? { nil };
a ? 2000;
)
---
(source_file
  (code_block
    (nil_check
      (variable
        (builtin_var ))
      (literal
        (string )))
    (nil_check
      (literal
        (number
          (integer )))
      (function_block
        (variable
          (builtin_var ))))
    (nil_check
      (variable
        (environment_var
          name: (identifier )))
      (literal
        (number
          (integer ))))))
=====================
String literal in unnamed argument calls
=====================
(
SynthDef(\yo, {});
SynthDef('yo', {});
)
---
(source_file
  (code_block
    (function_call
      receiver: (class )
      arguments: (parameter_call_list
        (unnamed_argument
          (literal
            (symbol)))
        (unnamed_argument
          (function_block ))))
    (function_call
      receiver: (class )
      arguments: (parameter_call_list
        (unnamed_argument
          (literal
            (symbol)))
        (unnamed_argument
          (function_block ))))))

=====================
return statement: string literal
=====================
(
^"hello";
)
---
(source_file
  (code_block
    (return_statement
      (literal
        (string )))))

=====================
return statement: string literal no semi colon
=====================
(
^"hello"
)
---
(source_file
  (code_block
    (return_statement
      (literal
        (string )))))

=====================
return statement with function call
=====================
EasyNRT {
	*new{
		^this.init()
	}
}
---
(source_file
  (class_def
    (class )
    body: (class_def_body
      (class_method_name )
      (function_block
        (return_statement
          (function_call
            receiver: (variable (local_var name: (identifier)))
            name: (identifier)
            arguments: (parameter_call_list )))))))

=====================
class method prefixed class: ar(SinOsc, 110)
=====================
(
ar(SinOsc, 110);
)
---
(source_file (code_block 
  (function_call 
    name: (identifier)
    receiver: (unnamed_argument (class))
    arguments: (parameter_call_list 
      (unnamed_argument (literal (number (integer))))))))

=====================
Argument list with no commas
=====================

(
{|argument1 argument2|}
)

---
(source_file
  (code_block
    (function_block
      (parameter_list
        (argument
          name: (identifier ))
        (argument
          name: (identifier ))))))

=====================
Spaces in argument list with no commas
=====================

(
{ | argument1 = \arg1 argument2 | }
)

---

(source_file
  (code_block
    (function_block
      (parameter_list
        (argument
          name: (identifier)
          value: (literal
            (symbol)))
        (argument
          name: (identifier))))))

=====================
Argument list with variable argument
=====================

(
{ | arg0, arg1 ...rest | };
)

---

(source_file
  (code_block
    (function_block
      (parameter_list
        (argument
          name: (identifier))
        (argument
          name: (identifier))
        (argument
          name: (identifier))))))

=====================
function call in associtive item
=====================
(
	[freq: 2, froq: FroqGen()]
)
---
(source_file
  (code_block
    (collection
      (associative_item
        (identifier )
        (item
          (literal
            (number
              (integer )))))
      (associative_item
        (identifier )
        (item
          (function_call
            (class ) (parameter_call_list)))))))

=====================
unfold argument list with *
=====================

(
	f = {|a1, a2, a3| [a1,a2,a3].postln};
	f.value(*[2,3,4])
)
---
(source_file
  (code_block
    (function_definition
      name: (variable (environment_var name: (identifier )))
      value: (function_block
        (parameter_list
          (argument
            name: (identifier ))
          (argument
            name: (identifier ))
          (argument
            name: (identifier )))
        (function_call
          receiver: (collection
          (variable
           (local_var
            name: (identifier )))
          (variable
           (local_var
            name: (identifier )))
          (variable
           (local_var
            name: (identifier ))))
          name: (identifier))))
    (function_call
      receiver: (variable (environment_var name: (identifier ))) 
      name: (identifier)
      arguments: (parameter_call_list
        (unnamed_argument
         (unary_expression
          right: (collection
            (literal
             (number
              (integer )))
            (literal
             (number
              (integer )))
            (literal
             (number
              (integer ))))))))))

==================
arg with ...
==================
(
f = {arg ...args; };
e = {|...args| };
)
---
(source_file
  (code_block
    (function_definition
      name: (variable
        (environment_var
          name: (identifier )))
      value: (function_block
        (parameter_list
          (argument
            name: (identifier )))))
    (function_definition
      name: (variable
        (environment_var
          name: (identifier )))
      value: (function_block
        (parameter_list
          (argument
            name: (identifier )))))))

==================
function call in binary operator
==================
(
 var sig = sig * EnvGen.kr(
   Env([0.0,1.0,1.0,0], [fadeIn, fadeOut], releaseNode: 2),
   gate: killgate,
   doneAction: 2
   );
 )
---
(source_file
 (code_block
  (variable_definition
   name: (variable
     (local_var
      name: (identifier )))
   value: (function_call
     receiver: (binary_expression
       left: (variable
         (local_var
          name: (identifier )))
       right: (class ))
     name: (identifier)
     arguments: (parameter_call_list
       (unnamed_argument 
        (function_call
         receiver: (class )
         arguments: (parameter_call_list
           (unnamed_argument
            (collection
             (literal (number (float )))
             (literal (number (float )))
             (literal (number (float )))
             (literal (number (integer )))))
           (unnamed_argument
            (collection
             (variable (local_var name: (identifier )))
             (variable (local_var name: (identifier )))))
           (named_argument
            name: (identifier )
            value: (literal (number (integer )))))))
       (named_argument
        name: (identifier )
        value: (variable (local_var name: (identifier ))))
       (named_argument
        name: (identifier )
        value: (literal (number (integer )))))))))

==================
instance variable setter method
==================
(
s.options.blockSize_(256);
)
---
(source_file
  (code_block
    (function_call
      receiver: (function_call
        receiver: (variable (environment_var name: (identifier)))
        name: (identifier)
      )
      name: (identifier)
      arguments: (parameter_call_list (unnamed_argument (literal (number (integer))))))))

==================
class method call explicit
==================

(
s = Server.new;
)

---
(source_file
  (code_block
    (variable_definition
      name: (variable (environment_var name: (identifier )))
      value: (function_call
        receiver: (class)
        name: (identifier)))))

==================
simple function definition no arguments
==================
f = {};

---
(source_file
  (function_definition
    (variable
      (environment_var (identifier)))
    (function_block )))

==================
Add two numbers in function with piped args
==================
f = {|oneArg=10, anotherArg=2| oneArg+anotherArg; };

---

(source_file
  (function_definition
    name: (variable
      (environment_var name: (identifier)))
    value: (function_block
      (parameter_list
        (argument name:
          (identifier )
          value: (literal
            (number
              (integer ))))
        (argument
          name: (identifier )
          value: (literal
            (number
              (integer )))))
      (binary_expression
        left: (variable
          (local_var name:
            (identifier )))
        right: (variable
          (local_var name:
            (identifier )))))))
==================
Add two numbers in function with arg list
==================
f = {arg oneArg=10, anotherArg=2; oneArg+anotherArg; };

---

(source_file
 (function_definition
  name: (variable
    (environment_var name: (identifier)))
  value: (function_block
    (parameter_list
     (argument
      name: (identifier )
      value: (literal
        (number
         (integer ))))
     (argument
      name: (identifier )
      value: (literal
        (number
         (integer )))))
    (binary_expression
     left: (variable
       (local_var
        name: (identifier )))
     right: (variable
       (local_var
        name: (identifier )))))))

==================
Class method calls, explicit
==================
(
SinOsc.ar(freq: 441, mul:0.25);
)
---
(source_file
  (code_block
    (function_call
     receiver: (class )
     name: (identifier)
     arguments: (parameter_call_list
       (named_argument
        name: (identifier )
        value: (literal (number (integer ))))
       (named_argument
        name: (identifier )
        value: (literal (number (float ))))))))

==================
classes as arguments
==================
  (
   {|a, b, c|}.value(SinOsc, LFTri, Saw)
  )
  ---
  (source_file
   (code_block
    (function_call
     receiver: (function_block
       (parameter_list
        (argument name: (identifier ))
        (argument name: (identifier ))
        (argument name: (identifier ))))
     name: (identifier)
     arguments: (parameter_call_list
       (unnamed_argument (class ))
       (unnamed_argument (class ))
       (unnamed_argument (class ))))))

==========================
Class as argument in mix of named/unnamed parameter list
==========================
(
 {|aaa, bbb, ccc|}.value(SinOsc, LFTri, ccc: Saw)
)
---
(source_file
 (code_block
  (function_call
   receiver: (function_block
     (parameter_list
      (argument name: (identifier ))
      (argument name: (identifier ))
      (argument name: (identifier ))))
   name: (identifier)
   arguments: (parameter_call_list
     (unnamed_argument (class ))
     (unnamed_argument (class ))
     (named_argument name: (identifier ) value: (class ))))))

============================
Implicit class method call to new in argument list
============================
(
{arg ab; }.value(SinOsc());
)
---

(source_file
 (code_block
  (function_call
   receiver: (function_block
     (parameter_list (argument name: (identifier ))))
   name: (identifier)
   arguments: (parameter_call_list
     (unnamed_argument 
      (function_call
       receiver: (class ) 
       arguments: (parameter_call_list)))))))

==================
Chaining methods on explicit new
==================
(
 Pfunc.new().trace
)
---
(source_file
 (code_block
  (function_call
   receiver: (function_call
    receiver: (class )
    name: (identifier)
    arguments: (parameter_call_list))
   name: (identifier))))

==================
Chaining methods on implicit new
==================
(
Pfunc().trace
)
---

(source_file
 (code_block
  (function_call
   receiver: (function_call
     receiver: (class )
     arguments: (parameter_call_list))
   name: (identifier))))

==================
Class method calls, implicit
==================

Synth();
Synth(1,3,2);

---

(source_file
 (function_call
  receiver: (class) arguments: (parameter_call_list))
 (function_call
  receiver: (class)
  arguments: (parameter_call_list
    (unnamed_argument (literal (number (integer ))))
    (unnamed_argument (literal (number (integer ))))
    (unnamed_argument (literal (number (integer )))))))

==================
Instance method (linlin on a float)
==================
0.5.linlin(0.0,1.0,1.0,10.0);
---

(source_file
 (function_call
  receiver: (literal (number (float )))
  name: (identifier)
  arguments: (parameter_call_list
    (unnamed_argument (literal (number (float ))))
    (unnamed_argument (literal (number (float ))))
    (unnamed_argument (literal (number (float ))))
    (unnamed_argument (literal (number (float)))))))

==================
instance method call with function as argument
==================
f = {|arg1|};
f.value(arg1: { "hej".postln; });
---

(source_file
  (function_definition
    name: (variable (environment_var name: (identifier)))
    value: (function_block
      (parameter_list (argument name: (identifier )))))
  (function_call
   receiver: (variable (environment_var name: (identifier)))
   name: (identifier)
   arguments: (parameter_call_list
     (named_argument
      name: (identifier )
      value: (function_block
        (function_call
         receiver: (literal (string ))
         name: (identifier)))))))

==================
instance method call with collection as argument
==================
f = {|arg1|};
f.value(arg1: #[1,2,3]);
---

(source_file
 (function_definition
  name: (variable (environment_var name: (identifier)))
  value: (function_block
    (parameter_list (argument name: (identifier )))))
 (function_call
  receiver: (variable (environment_var name: (identifier)))
  name: (identifier)
  arguments: (parameter_call_list
    (named_argument
     name: (identifier )
     value: (collection
       (literal (number (integer )))
       (literal (number (integer )))
       (literal (number (integer ))))))))

==================
instance method call with string as argument
==================
f = {|arg1|};
f.value(arg1: "hejhje hej");
---

(source_file
 (function_definition
  name: (variable (environment_var name: (identifier)))
  value: (function_block
    (parameter_list (argument name: (identifier )))))
 (function_call
  receiver: (variable (environment_var name: (identifier)))
  name: (identifier)
  arguments: (parameter_call_list
    (named_argument
     name: (identifier )
     value: (literal (string ))))))

==================
instance method call with symbol as argument
==================
f = {|arg1|};
f.value(arg1: \hej);
---

(source_file
 (function_definition
  name: (variable (environment_var name: (identifier)))
  value: (function_block
    (parameter_list (argument name: (identifier )))))
 (function_call
  receiver: (variable (environment_var name: (identifier)))
  name: (identifier)
  arguments: (parameter_call_list
    (named_argument
     name: (identifier )
     value: (literal (symbol ))))))

==================
chained instance methods on literal
==================
"Hej % and %".format(20, 33).postln;
---

(source_file
  (function_call
    receiver: (function_call
      receiver: (literal (string))
      name: (identifier)
      arguments: (parameter_call_list
        (unnamed_argument (literal (number (integer))))
        (unnamed_argument (literal (number (integer))))
      )
    )
    name: (identifier)))

==================
chained instance methods on env var
==================
a = 10;
a.pow(2).nextPowerOfThree;
---

(source_file
 (variable_definition
  name: (variable (environment_var name: (identifier)))
  value: (literal (number (integer ))))
 (function_call
  receiver: (function_call
    receiver: (variable (environment_var name: (identifier)))
    name: (identifier)
    arguments: (parameter_call_list
      (unnamed_argument (literal (number (integer))))))
  name: (identifier)
 ))

=====================
function call with regular and block arguments
=====================
SynthDef(\test) { };
---

(source_file
 (function_call
  receiver: (class)
  arguments: (parameter_call_list 
    (unnamed_argument (literal (symbol)))
    (function_block))))

=====================
function call with block argument
=====================
Pspawner {|sp| };
---
(source_file
  (function_call
    (class)
    (parameter_call_list 
      (function_block
        (parameter_list (argument (identifier)))))))

=====================
function call with multiple block arguments
=====================
(
Something { } { };
)
---
(source_file (code_block
  (function_call
    (class)
    (parameter_call_list 
      (function_block)
      (function_block)))))

================================================================================
named arguments with single-letter names
================================================================================

f.value(2, c: 3, b: 4);

--------------------------------------------------------------------------------

(source_file
  (function_call
    (variable
      (environment_var
        (identifier)))
    (identifier)
    (parameter_call_list
      (unnamed_argument
        (literal
          (number
            (integer))))
      (named_argument
        (identifier)
        (literal
          (number
            (integer))))
      (named_argument
        (identifier)
        (literal
          (number
            (integer)))))))

================================================================================
assignment to interpreter global in argument position stays unnamed
================================================================================

s.sendMsg("/s_new", "test", n = s.nextNodeID);

--------------------------------------------------------------------------------

(source_file
  (function_call
    (variable
      (environment_var
        (identifier)))
    (identifier)
    (parameter_call_list
      (unnamed_argument
        (literal
          (string)))
      (unnamed_argument
        (literal
          (string)))
      (unnamed_argument
        (function_call
          (binary_expression
            (variable
              (environment_var
                (identifier)))
            (variable
              (environment_var
                (identifier))))
          (identifier))))))
