test/corpus/literals.txt
==================
string concat
==================
(
"hej" ++ "med dig";
)
---
(source_file 
  (code_block 
    (binary_expression 
      left: (literal 
        (string ))
      right: (literal 
        (string )))))

==================
2.0pi
==================
(
2.0pi
)
---
(source_file 
  (code_block 
    (literal 
      (pi_statement 
        (number 
          (float ))))))

==================
2pi
==================
(
2pi
)
---
(source_file 
  (code_block 
    (literal 
      (pi_statement 
        (number 
          (integer ))))))

==================
single number
==================
1;

---
(source_file 
  (literal 
    (number 
      (integer))))

==================
unary single number
==================
-1;

---
(source_file
  (unary_expression
    right: 
	(literal 
		(number
        	(integer )))))

==================
unary numbers in binary expression
==================
-1 * -2;

---
(source_file
  (binary_expression
    left: (unary_expression
      right: (literal
        (number
          (integer ))))
    right: (unary_expression
      right: (literal
        (number
          (integer ))))
		  ))

==================
literal with method
==================
10.5.round;
---
(source_file 
  (function_call 
    (receiver 
      (literal 
        (number 
          (float ))))
    (instance_method_call 
      (method_name ))))


==================
literal number
==================
var number = 100;
var anotherNumber = 100.81238;
var aHexyNumber = 0xFFFFFF;
var expNegative = 1e-10;
var expPositive = 14e10;
var expDecimal = 1.4e4;
var expUpperCase = 1E8;
var expNegativePre = -1E8;

---
(source_file 
  (variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
      (number 
        (integer ))))
(variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
      (number 
        (float ))))
(variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
      (number 
        (hexinteger ))))
(variable_definition
    (variable
      (local_var
        (identifier )))
    (literal
      (number
        (exponential ))))
(variable_definition
    (variable
      (local_var
        (identifier )))
    (literal
      (number
        (exponential ))))
(variable_definition
    (variable
      (local_var
        (identifier )))
    (literal
      (number
        (exponential ))))
(variable_definition
    (variable
      (local_var
        (identifier )))
    (literal
      (number
        (exponential ))))
(variable_definition
    (variable
      (local_var
        (identifier )))
    (literal
      (number
        (exponential ))))
	)

==================
literal string
==================
var string = "hej med Dig !#)¤!¤AZ";

---
(source_file 
  (variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
      (string ))))

==================
literal symbol slashed
==================
var sym = \averyLongSymbol;

---
(source_file 
  (variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
        (symbol (identifier)))))

==================
literal symbol single quoted
==================
var sym = 'averyLongSymbol';

---
(source_file 
  (variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
        (symbol (identifier)))))


==================
literal char
==================
var charvar = $w;

---
(source_file 
  (variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
        (char ))))

==================
literal bool
==================
var boolean = true;
var boolean2 = false;

---
(source_file 
  (variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
        (bool )))
  (variable_definition 
    (variable 
      (local_var 
        (identifier )))
    (literal 
        (bool ))))
